--- a/data/speakers/Speaker01.toml
+++ b/data/speakers/Speaker01.toml
@@ -1,10 +1,7 @@
-img = "faceholder.png"
-name = "Speaker Name 01"
-organisation = "Company 1"
-role = "Role 1"
+img = "ae.jpeg"
+name = "Anicet Ebou"
+organisation = ""
+role = "Organisateur Principal"
 social = [
-        ["fa-twitter", "#"],
-        ["fa-github", "#"],
-        ["fa-linkedin", "#"],
-        ["fa-globe", "#"]
+        ["fa-twitter", "https://twitter.com/anicetebou"],
       ]
