--- a/data/speakers/Speaker02.toml
+++ b/data/speakers/Speaker02.toml
@@ -1,7 +1,7 @@
-img = "faceholder.png"
-name = "Speaker Name 02"
-organisation = "Company 2"
-role = "Role 1"
+img = "ee.jpg"
+name = "Evans Ehouman"
+organisation = ""
+role = "Organisation et Logistique"
 social = [
-        ["fa-twitter", "#"],
+        ["fa-twitter", "https://twitter.com/ehoumanevans"],
       ]
