Add why R foundation as sponsor

--- a/config.toml
+++ b/config.toml
@@ -324,20 +324,12 @@ disableKinds = ["taxonomy", "taxonomyTerm"]
     # Replace them with your clients's logos.
     # Suggestion: .svg in the size of 280px*80px looks good
     [[params.clients]]
+      logo = "whyr_logo.jpg"
+      link = "http://whyr.pl/"
+
+    [[params.clients]]
       logo = "jr.png"
       link = "https://www.jumpingrivers.com/"
-
-    [[params.clients]]
-      logo = ""
-      link = "#"
-
-    [[params.clients]]
-      logo = ""
-      link = "#"
-
-    [[params.clients]]
-      logo = ""
-      link = "#"
 
   [params.diversity]
     enable = false
